cupsys (1.1.99.b1.r4841-2) UNRELEASED; urgency=low

  [ Martin Pitt ]
  * debian/local/{enable_browsing,browsing_status}: Adapt configuration file
    locations to new conf.d structure.
  * debian/cupsys.templates: Fix default value for cupsys/browse: 'yes' is an
    invalid bool option, change to true.

 -- Martin Pitt <mpitt@debian.org>  Wed,  7 Dec 2005 13:43:42 +0100

cupsys (1.1.99.b1.r4841-1) experimental; urgency=low

  * EXPERIMENTAL
  * New SVN release taken from r4841.
  * Remove -pie and -fpie from compiler option. pie option causes
    a problem with Debian binutils.
    I hope this change avoids FTBFS on sparc and others. (closes: #339120)

 -- Kenshi Muto <kmuto@debian.org>  Wed, 16 Nov 2005 12:27:27 +0000

cupsys (1.1.99.b1.r4748-4) experimental; urgency=low

  * EXPERIMENTAL
  * 00_r4835.dpatch: Taken from r4835.
    Well, r4835 removes some files. It means dpkg-buildpackage always
    fails when we rebuild source. Maybe it's time to change orig source.
    Moved obsolete patches to patches/obsolete.
  * 48_stdlib.dpatch: Fix FTBFS for arm, mips, and mipsel.
  * 03_manext.dpatch: Don't use upstream's manpage file handling.
    Debian uses dh_installman.
  * 04_freebsd.dpatch: Apply Brian's patch to support GNU/kFreeBSD
    (closes: #338266)
  * Install lppasswd as owner 'lp'.

 -- Kenshi Muto <kmuto@debian.org>  Fri,  4 Nov 2005 13:56:27 +0000

cupsys (1.1.99.b1.r4748-3) experimental; urgency=low

  * EXPERIMENTAL
  * 47_pid.dpatch: Modified to allow to configure location of pid file.
    (closes: #337093)
    You can change this location by PidFile directive at your cupsd.conf.
  * Remove example comments from init script. (closes: #334842)

 -- Kenshi Muto <kmuto@debian.org>  Thu,  3 Nov 2005 11:39:07 +0000

cupsys (1.1.99.b1.r4748-2) experimental; urgency=medium

  * EXPERIMENTAL
  * 02_configure.dpatch: Modified to remove -pie/-fpie if arch = x86_64.
    (closes: #335199)

 -- Kenshi Muto <kmuto@debian.org>  Mon, 24 Oct 2005 11:42:59 +0000
